--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "recoil": "^0.4.1",
+    "styled-components": "^5.3.1",
+    "web-vitals": "^1.1.2",
+    "web3": "^1.6.0",
+    "web3-utils": "^1.6.0",
+    "web3modal": "^1.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
