--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-scripts": "4.0.3",
     "recoil": "^0.4.1",
     "styled-components": "^5.3.1",
+    "truffle-hdwallet-provider-privkey": "^0.3.0",
+    "truffle-privatekey-provider": "^1.5.0",
     "web-vitals": "^1.1.2",
     "web3": "^1.6.0",
     "web3-utils": "^1.6.0",
@@ -43,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@openzeppelin/contracts": "^4.3.3",
+    "@truffle/hdwallet-provider": "^1.6.0",
+    "truffle": "^5.4.19"
   }
 }
