--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "web3modal": "^1.9.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cp -rf ./build/contracts/ ./src/lib/contracts/ && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
