--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@walletconnect/web3-provider": "^1.6.6",
     "axios": "^0.24.0",
+    "copy-text-to-clipboard": "^3.0.1",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-daum-postcode": "^3.0.1",
