--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "recoil": "^0.4.1",
+    "recoil-persist": "^4.0.0",
     "styled-components": "^5.3.1",
     "truffle-hdwallet-provider-privkey": "^0.3.0",
     "truffle-privatekey-provider": "^1.5.0",
